# GOTronome

./: .gitignore  PRIVACY  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/pdp/gotronome/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MetronomeEngine.cpp  MetronomeEngine.h  jni_bridge.cpp
app/src/main/java/com/pdp/gotronome/: BeatView.kt  InfoScreen.kt  MainActivity.kt  Metronome.kt  MetronomeCallback.kt  MetronomeScreen.kt  MetronomeViewModel.kt  MockMetronomeViewModel.kt  SettingsScreenHorizontal.kt  SettingsScreenVertical.kt  TimeSignature.java
app/src/main/java/com/pdp/gotronome/components/: AppMenu.kt  CircularBpmSelector.kt  CircularBpmSelectorWithImage.kt  TimeSelectorHorizontal.kt  TimeSelectorVertical.kt  TimeSignatureSelectorHorizontal.kt  TimeSignatureSelectorVertical.kt
app/src/main/java/com/pdp/gotronome/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: gotronome_banner.xml  gotronome_icon.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/pdp/gotronome/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
metronome-oboe/: build.gradle.kts
metronome-oboe/src/androidTest/java/com/pdp/metronome_oboe/: ExampleInstrumentedTest.kt
metronome-oboe/src/main/cpp/: CMakeLists.txt  metronome_oboe.cpp
metronome-oboe/src/main/java/com/pdp/metronome_oboe/: NativeLib.kt
metronome-oboe/src/test/java/com/pdp/metronome_oboe/: ExampleUnitTest.kt
